fix bottom-bar title cropped

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -695,6 +695,7 @@ ion-view.splash ion-content {
     color:white;
     left: inherit!important;
     right: inherit!important;
+    width: inherit!important;
   }
 }
 
